--- a/aboutMe.html
+++ b/aboutMe.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<header class="container header">
+		<header id="mainHeader" class="container header">
 			<a class="logo" href="index.html">Довгуй Наталія Сергіївна</a>
 			<nav class="nav">
 				<ul class="navList">
@@ -38,12 +38,40 @@
 		</header>
 		<main>
 			<section class="container hero">
-				<h1>ПРО МЕНЕ</h1>
+				<h1 class="heroTitle">ПРО МЕНЕ</h1>
 			</section>
-			<section class="container aboutMe"><h2></h2></section>
-			<section class="container blog"><h2></h2></section>
-			<section class="container contact"><h2></h2></section>
-			<section class="container services"><h3></h3></section>
+			<section class="container aboutMe">
+				<h2>
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro
+					aliquam, quasi magnam perspiciatis reiciendis esse eius enim eum.
+					Voluptatum magni, omnis rem nesciunt enim perspiciatis neque nulla ut
+					necessitatibus quia?
+				</h2>
+			</section>
+			<section class="container blog">
+				<h2>
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab quaerat
+					atque esse veniam unde ullam a quo aliquid doloremque, itaque, autem
+					qui repudiandae cum asperiores voluptate numquam dignissimos
+					consectetur nobis.
+				</h2>
+			</section>
+			<section class="container contact">
+				<h2>
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos tempora
+					quasi quas itaque tempore! Qui consequatur non fugiat illum, fugit
+					adipisci aspernatur obcaecati doloremque consectetur laudantium vero
+					voluptas, facilis quos.
+				</h2>
+			</section>
+			<section class="container services">
+				<h3>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
+					tenetur, ipsum officiis voluptatibus asperiores libero, maiores optio
+					tempore vero exercitationem eligendi iste dolore ullam? Accusantium
+					modi veritatis autem maxime aperiam!
+				</h3>
+			</section>
 		</main>
 		<footer></footer>
 	</body>
