--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
 		</header>
 		<main>
 			<section class="container hero">
-				<h1>БЛОГ</h1>
+				<h1 class="heroTitle">БЛОГ</h1>
 			</section>
 			<section class="container aboutMe"><h2></h2></section>
 			<section class="container blog"><h2></h2></section>
