--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<header class="container header">
+		<header id="mainHeader" class="container header">
 			<a class="logo" href="index.html">Довгуй Наталія Сергіївна</a>
 			<nav class="nav">
 				<ul class="navList">
@@ -38,13 +38,120 @@
 		</header>
 		<main>
 			<section class="container hero">
-				<h1>ГОЛОВНА</h1>
+				<h1 class="heroTitle">ГОЛОВНА</h1>
 			</section>
-			<section class="container aboutMe"><h2></h2></section>
-			<section class="container blog"><h2></h2></section>
-			<section class="container contact"><h2></h2></section>
-			<section class="container services"><h3></h3></section>
+			<section class="container aboutMe">
+				<h2>
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
+					consequuntur repudiandae doloribus ratione. Pariatur cum in facilis
+					porro quasi voluptas vitae ullam! Tempora harum impedit ad quaerat
+					voluptates aliquam perspiciatis.
+				</h2>
+			</section>
+			<section class="container blog">
+				<h2>
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur,
+					adipisci ea rerum culpa similique architecto optio eum quas unde quis
+					commodi odit nihil illo vitae esse error est earum omnis!
+				</h2>
+			</section>
+			<section class="container contact">
+				<h2>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore at
+					provident illum odio hic praesentium, reiciendis porro aspernatur
+					atque eum tempore error animi ut libero necessitatibus. Sunt nisi
+					similique ipsa.
+				</h2>
+			</section>
+			<section class="container services">
+				<h3>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</h3>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea
+					tempore cupiditate, sint dicta earum necessitatibus eos aut laudantium
+					perspiciatis architecto dolor dolorum ipsam accusamus voluptas? Eius
+					illo voluptates dolore?
+				</p>
+			</section>
 		</main>
 		<footer></footer>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script type="module" src="./js/scroll.js"></script>
 	</body>
 </html>
