--- a/contacts.html
+++ b/contacts.html
@@ -38,7 +38,7 @@
 		</header>
 		<main>
 			<section class="container hero">
-				<h1>КОНТАКТИ</h1>
+				<h1 class="heroTitle">КОНТАКТИ</h1>
 			</section>
 			<section class="container aboutMe"><h2></h2></section>
 			<section class="container blog"><h2></h2></section>
