--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<a class="logo" href="index.html">Довгуй Наталія Сергіївна</a>
 			<nav class="nav">
 				<ul class="navList">
-					<li class="active navListOne">
-						<a class="navLink" href="index.html">ГОЛОВНА</a>
+					<li class="navListOne">
+						<a class="active navLink" href="index.html">ГОЛОВНА</a>
 					</li>
 					<li class="navListOne">
 						<a class="navLink" href="aboutMe.html">ПРО МЕНЕ</a>
@@ -38,7 +38,11 @@
 		</header>
 		<main>
 			<section class="container hero">
-				<h1 class="heroTitle">ГОЛОВНА</h1>
+				<!-- <h1 class="heroTitle">ГОЛОВНА</h1> -->
+				<div class="heroContent">
+					<p class="heroText">Потребуєш допомоги?</p>
+					<button class="heroButton button" type="button">ТИСНИ</button>
+				</div>
 			</section>
 			<section class="container aboutMe">
 				<h2>
